Revision history for Perl extension HTTP-Body-Builder

{{$NEXT}}

0.03 2013-10-08T23:32:29Z

    - use binmode to keep CRLF correctly
      (charsbar)

0.02 2013-09-26T07:34:18Z

    - fixed deps

0.01 2013-09-21T06:52:02Z

    - original version
